--- a/src/sass/theme/_props.scss
+++ b/src/sass/theme/_props.scss
@@ -3,6 +3,7 @@ $col-secondary: #e9988e;
 
 :root {
 
+	--hsl-dark-grey:        213 15% 59%;
 	--col-dark-grey:        #8795A6;
 	--col-mid-grey:         #DBDFE4;
 	--col-off-white:        #F2F4F6;
