--- a/src/sass/theme/blocks/_cb_pricing.scss
+++ b/src/sass/theme/blocks/_cb_pricing.scss
@@ -173,3 +173,10 @@
     }
 
 }
+
+.faq-item-wrapper {
+    border: 2px solid hsl(var(--hsl-dark-grey) / 0.5);
+    border-radius: var(--border-sm);
+    background-color: white;
+    padding: 1rem;
+}
