--- a/src/sass/theme/_buttons.scss
+++ b/src/sass/theme/_buttons.scss
@@ -99,6 +99,7 @@
         color: #fff !important;
     }
 }
+.btn-talenttrack,
 .btn-talent {
     background-color: var(--col-talent-pink);
     color: var(--col-white);
@@ -111,6 +112,7 @@
         color: #fff !important;
     }
 }
+.btn-talenttrack--outline,
 .btn-talent--outline {
     background-color: var(--col-white);
     border: 2px solid var(--col-talent-pink);
