--- a/src/sass/theme/blocks/_cb_all_integrations.scss
+++ b/src/sass/theme/blocks/_cb_all_integrations.scss
@@ -168,4 +168,9 @@
             flex-wrap: wrap;
         }
     }
+
+    .results-info {
+        font-size: var(--fs-menu-descr);
+        color: var(--col-dark-grey);
+    }
 }
