--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -17,6 +17,7 @@
   --fw-bold: 600;
   --fs-hero-title: 56px;
   --fs-hero-intro: 22px;
+  --fs-integrations-menu-title: 20px;
   --fs-hero-subtitle: 36px;
   --fs-blockquote: 40px;
   --fs-menu-title: 24px;
