--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -6,6 +6,7 @@
 @import "buttons";
 @import "deals";
 @import "blog";
+@import "integrations";
 @import "forms";
 @import "blocks/blocks";
 // @import "case_study";
