--- a/src/sass/theme/_colours.scss
+++ b/src/sass/theme/_colours.scss
@@ -40,6 +40,7 @@
     background-color: var(--col-highlight-green) !important;
 }
 
+.has-talenttrack-pink-color,
 .has-talent-pink-color {
     color: var(--col-talent-pink) !important;
 }
