--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -17,6 +17,7 @@
   --fw-bold: 600;
   --fs-hero-title: 56px;
   --fs-hero-intro: 22px;
+  --fs-integrations-menu-title: 20px;
   --fs-hero-subtitle: 36px;
   --fs-blockquote: 40px;
   --fs-menu-title: 24px;
@@ -21140,6 +21141,7 @@ strong, b {
   background-color: var(--col-highlight-green) !important;
 }
 
+.has-talenttrack-pink-color,
 .has-talent-pink-color {
   color: var(--col-talent-pink) !important;
 }
@@ -21275,7 +21277,6 @@ strong, b {
 
 .mega-panel {
   background-color: var(--col-off-white);
-  border-top: 1px solid #e5e5e5;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
   box-shadow: var(--shadow-lg);
 }
@@ -21319,6 +21320,84 @@ strong, b {
   gap: 1rem;
   margin-top: 1rem;
   align-items: center;
+}
+
+.mega-menu--integrations .integration-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 0.5rem;
+}
+.mega-menu--integrations .integration-list-item {
+  display: grid;
+  grid-template-columns: 44px auto;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.25rem 0;
+}
+.mega-menu--integrations .integration-title {
+  font-family: var(--ff-body);
+  font-size: var(--fs-menu-intro);
+}
+.mega-menu--integrations .integrations-col1 {
+  background-color: var(--col-dark-grey);
+}
+.mega-menu--integrations .integrations-col1 h3, .mega-menu--integrations .integrations-col1 .h3 {
+  font-size: var(--fs-integrations-menu-title);
+  font-family: var(--ff-body);
+  color: var(--col-white);
+}
+.mega-menu--integrations .integrations-col1 p {
+  color: var(--col-mid-grey);
+}
+.mega-menu--integrations .integrations-col2 {
+  border-right: 1px solid var(--col-mid-grey);
+}
+.mega-menu--integrations .integrations-col2,
+.mega-menu--integrations .integrations-col3 {
+  display: flex;
+  flex-direction: column;
+}
+.mega-menu--integrations .integrations-col2 .h5,
+.mega-menu--integrations .integrations-col3 .h5 {
+  margin-bottom: 1rem;
+}
+.mega-menu--integrations .integrations-col2 .integration-list,
+.mega-menu--integrations .integrations-col3 .integration-list {
+  flex: 1;
+}
+.mega-menu--integrations .integrations-col2 a.has-arrow,
+.mega-menu--integrations .integrations-col3 a.has-arrow {
+  margin-top: auto;
+  padding-top: 1rem;
+}
+.mega-menu--integrations a.has-arrow::after {
+  content: "";
+  display: inline-block;
+  -webkit-margin-start: 0.5rem;
+  margin-inline-start: 0.5rem;
+  width: 16px;
+  height: 16px;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 23.61 23.56'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %233b7dc0; stroke-width: 1.5px; %7D %3C/style%3E%3C/defs%3E%3Cpath id='Icon_akar-arrow-forward-thick-fill' data-name='Icon akar-arrow-forward-thick-fill' class='cls-1' d='M14.52.8c.4-.14.85,0,1.12.33l7.01,9.02c.28.36.28.87,0,1.23l-7.01,9.02c-.34.44-.96.52-1.4.18-.25-.19-.39-.49-.39-.8v-4c-5.39.11-7.98,1.14-9.28,2.25-1,.94-1.61,2.23-1.7,3.6l-.06.34c-.09.54-.61.91-1.15.82-.46-.08-.81-.47-.83-.94-.3-3.48.4-6.98,2.03-10.08,1.89-3.24,5.29-5.73,11-5.99V1.75c0-.43.27-.81.68-.95h0Z'/%3E%3C/svg%3E");
+}
+.mega-menu--integrations .has-talenttrack-pink-color .h5 {
+  font-size: var(--fs-integrations-menu-title);
+  color: var(--col-talent-pink);
+}
+.mega-menu--integrations .has-talenttrack-pink-color a.has-arrow {
+  color: var(--col-talent-pink) !important;
+}
+.mega-menu--integrations .has-talenttrack-pink-color a.has-arrow::after {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 23.61 23.56'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %23e91e63; stroke-width: 1.5px; %7D %3C/style%3E%3C/defs%3E%3Cpath id='Icon_akar-arrow-forward-thick-fill' data-name='Icon akar-arrow-forward-thick-fill' class='cls-1' d='M14.52.8c.4-.14.85,0,1.12.33l7.01,9.02c.28.36.28.87,0,1.23l-7.01,9.02c-.34.44-.96.52-1.4.18-.25-.19-.39-.49-.39-.8v-4c-5.39.11-7.98,1.14-9.28,2.25-1,.94-1.61,2.23-1.7,3.6l-.06.34c-.09.54-.61.91-1.15.82-.46-.08-.81-.47-.83-.94-.3-3.48.4-6.98,2.03-10.08,1.89-3.24,5.29-5.73,11-5.99V1.75c0-.43.27-.81.68-.95h0Z'/%3E%3C/svg%3E");
+}
+.mega-menu--integrations .has-call360-blue-color .h5 {
+  font-size: var(--fs-integrations-menu-title);
+  color: var(--col-call360-blue);
+}
+.mega-menu--integrations .has-call360-blue-color a.has-arrow {
+  color: var(--col-call360-blue) !important;
+}
+.mega-menu--integrations .has-call360-blue-color a.has-arrow::after {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 23.61 23.56'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %233b7dc0; stroke-width: 1.5px; %7D %3C/style%3E%3C/defs%3E%3Cpath id='Icon_akar-arrow-forward-thick-fill' data-name='Icon akar-arrow-forward-thick-fill' class='cls-1' d='M14.52.8c.4-.14.85,0,1.12.33l7.01,9.02c.28.36.28.87,0,1.23l-7.01,9.02c-.34.44-.96.52-1.4.18-.25-.19-.39-.49-.39-.8v-4c-5.39.11-7.98,1.14-9.28,2.25-1,.94-1.61,2.23-1.7,3.6l-.06.34c-.09.54-.61.91-1.15.82-.46-.08-.81-.47-.83-.94-.3-3.48.4-6.98,2.03-10.08,1.89-3.24,5.29-5.73,11-5.99V1.75c0-.43.27-.81.68-.95h0Z'/%3E%3C/svg%3E");
 }
 
 .footer {
@@ -21912,6 +21991,10 @@ strong, b {
 }
 .single_blog_card__date {
   font-size: var(--fs-100);
+}
+
+.single_integration {
+  margin-top: calc(var(--h-top) + 1rem);
 }
 
 /* .fieldset-cf7mls-wrapper {
