--- a/src/sass/theme/_header.scss
+++ b/src/sass/theme/_header.scss
@@ -132,7 +132,7 @@
 }
 .mega-panel {
 	background-color: var(--col-off-white);
-	border-top: 1px solid #e5e5e5;
+	// border-top: 1px solid #e5e5e5;
 	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
     box-shadow: var(--shadow-lg);
 }
@@ -176,3 +176,96 @@
     }
 }
 
+.mega-menu--integrations {
+    .integration-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-bottom: 0.5rem;
+    }
+    .integration-list-item {
+        display: grid;
+        grid-template-columns: 44px auto;
+        align-items: center;
+        gap: 1rem;
+        padding: 0.25rem 0;
+    }
+    .integration-title {
+        font-family: var(--ff-body);
+        font-size: var(--fs-menu-intro);
+    }
+
+    .integrations-col1 {
+        background-color: var(--col-dark-grey);
+        h3 {
+            font-size: var(--fs-integrations-menu-title);
+            font-family: var(--ff-body);
+            color: var(--col-white);
+        }
+        p {
+            color: var(--col-mid-grey);
+        }
+    }
+
+    .integrations-col2 {
+        border-right: 1px solid var(--col-mid-grey);
+    }
+
+    // Columns 2 and 3 - flex layout to push "See all" link to bottom
+    .integrations-col2,
+    .integrations-col3 {
+        display: flex;
+        flex-direction: column;
+        
+        .h5 {
+            margin-bottom: 1rem;
+        }
+        
+        .integration-list {
+            flex: 1;
+        }
+        
+        a.has-arrow {
+            margin-top: auto;
+            padding-top: 1rem;
+        }
+    }
+
+    a.has-arrow {
+        &::after {
+            content: '';
+            display: inline-block;
+            margin-inline-start: 0.5rem;
+            width: 16px;
+            height: 16px;
+            background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 23.61 23.56'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %233b7dc0; stroke-width: 1.5px; %7D %3C/style%3E%3C/defs%3E%3Cpath id='Icon_akar-arrow-forward-thick-fill' data-name='Icon akar-arrow-forward-thick-fill' class='cls-1' d='M14.52.8c.4-.14.85,0,1.12.33l7.01,9.02c.28.36.28.87,0,1.23l-7.01,9.02c-.34.44-.96.52-1.4.18-.25-.19-.39-.49-.39-.8v-4c-5.39.11-7.98,1.14-9.28,2.25-1,.94-1.61,2.23-1.7,3.6l-.06.34c-.09.54-.61.91-1.15.82-.46-.08-.81-.47-.83-.94-.3-3.48.4-6.98,2.03-10.08,1.89-3.24,5.29-5.73,11-5.99V1.75c0-.43.27-.81.68-.95h0Z'/%3E%3C/svg%3E");
+        }
+    }
+
+    // Color variants for integration columns
+    .has-talenttrack-pink-color {
+        .h5 {
+            font-size: var(--fs-integrations-menu-title);
+            color: var(--col-talent-pink);
+        }
+        a.has-arrow {
+            color: var(--col-talent-pink) !important;
+            &::after {
+                background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 23.61 23.56'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %23e91e63; stroke-width: 1.5px; %7D %3C/style%3E%3C/defs%3E%3Cpath id='Icon_akar-arrow-forward-thick-fill' data-name='Icon akar-arrow-forward-thick-fill' class='cls-1' d='M14.52.8c.4-.14.85,0,1.12.33l7.01,9.02c.28.36.28.87,0,1.23l-7.01,9.02c-.34.44-.96.52-1.4.18-.25-.19-.39-.49-.39-.8v-4c-5.39.11-7.98,1.14-9.28,2.25-1,.94-1.61,2.23-1.7,3.6l-.06.34c-.09.54-.61.91-1.15.82-.46-.08-.81-.47-.83-.94-.3-3.48.4-6.98,2.03-10.08,1.89-3.24,5.29-5.73,11-5.99V1.75c0-.43.27-.81.68-.95h0Z'/%3E%3C/svg%3E");
+            }
+        }
+    }
+
+    .has-call360-blue-color {
+        .h5 {
+            font-size: var(--fs-integrations-menu-title);
+            color: var(--col-call360-blue);
+        }
+        a.has-arrow {
+            color: var(--col-call360-blue) !important;
+            &::after {
+                background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 23.61 23.56'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %233b7dc0; stroke-width: 1.5px; %7D %3C/style%3E%3C/defs%3E%3Cpath id='Icon_akar-arrow-forward-thick-fill' data-name='Icon akar-arrow-forward-thick-fill' class='cls-1' d='M14.52.8c.4-.14.85,0,1.12.33l7.01,9.02c.28.36.28.87,0,1.23l-7.01,9.02c-.34.44-.96.52-1.4.18-.25-.19-.39-.49-.39-.8v-4c-5.39.11-7.98,1.14-9.28,2.25-1,.94-1.61,2.23-1.7,3.6l-.06.34c-.09.54-.61.91-1.15.82-.46-.08-.81-.47-.83-.94-.3-3.48.4-6.98,2.03-10.08,1.89-3.24,5.29-5.73,11-5.99V1.75c0-.43.27-.81.68-.95h0Z'/%3E%3C/svg%3E");
+            }
+        }
+    }
+    
+}
