--- a/src/sass/theme/_props.scss
+++ b/src/sass/theme/_props.scss
@@ -24,6 +24,7 @@ $col-secondary: #e9988e;
 
 --fs-hero-title: 56px;
 --fs-hero-intro: 22px;
+--fs-integrations-menu-title: 20px;
 --fs-hero-subtitle: 36px;
 --fs-blockquote: 40px;
 --fs-menu-title: 24px;
