--- a/src/sass/theme/_header.scss
+++ b/src/sass/theme/_header.scss
@@ -191,7 +191,7 @@
     }
     .integration-title {
         font-family: var(--ff-body);
-        font-size: var(--fs-menu-intro);
+        font-size: var(--fs-menu-descr);
     }
 
     .integrations-col1 {
