--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -21299,7 +21299,7 @@ strong, b {
 }
 @media (min-width: 992px) {
   .mega-menu {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 0.8fr 1fr 1fr;
     -moz-column-gap: 2rem;
     column-gap: 2rem;
   }
@@ -21398,6 +21398,20 @@ strong, b {
 }
 .mega-menu--integrations .has-call360-blue-color a.has-arrow::after {
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 23.61 23.56'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %233b7dc0; stroke-width: 1.5px; %7D %3C/style%3E%3C/defs%3E%3Cpath id='Icon_akar-arrow-forward-thick-fill' data-name='Icon akar-arrow-forward-thick-fill' class='cls-1' d='M14.52.8c.4-.14.85,0,1.12.33l7.01,9.02c.28.36.28.87,0,1.23l-7.01,9.02c-.34.44-.96.52-1.4.18-.25-.19-.39-.49-.39-.8v-4c-5.39.11-7.98,1.14-9.28,2.25-1,.94-1.61,2.23-1.7,3.6l-.06.34c-.09.54-.61.91-1.15.82-.46-.08-.81-.47-.83-.94-.3-3.48.4-6.98,2.03-10.08,1.89-3.24,5.29-5.73,11-5.99V1.75c0-.43.27-.81.68-.95h0Z'/%3E%3C/svg%3E");
+}
+
+.mega-menu--resources .resources-col1 {
+  background-color: var(--col-dark-grey);
+}
+.mega-menu--resources .resources-col1 img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
+}
+.mega-menu--resources .resources-col1 .h5 {
+  font-size: var(--fs-integrations-menu-title);
+  color: var(--col-white);
 }
 
 .footer {
