--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -8,6 +8,7 @@
 @import "blog";
 @import "integrations";
 @import "forms";
+@import "trial-form";
 @import "blocks/blocks";
 // @import "case_study";
 
