--- a/src/sass/theme/_typography.scss
+++ b/src/sass/theme/_typography.scss
@@ -69,20 +69,23 @@ h4, .h4 {
     // font-weight: var(--fw-600);
 }
 
-.fs-100 { font-size: var(--fs-100); }
-.fs-200 { font-size: var(--fs-200); }
-.fs-300 { font-size: var(--fs-300); }
-.fs-400 { font-size: var(--fs-400); }
-.fs-500 { font-size: var(--fs-500); }
-.fs-600 { font-size: var(--fs-600); }
-.fs-700 { font-size: var(--fs-700); }
-.fs-800 { font-size: var(--fs-800); }
-.fs-900 { font-size: var(--fs-900); }
+.fs-100 { font-size: var(--fs-100) !important; }
+.fs-200 { font-size: var(--fs-200) !important; }
+.fs-300 { font-size: var(--fs-300) !important; }
+.fs-400 { font-size: var(--fs-400) !important; }
+.fs-500 { font-size: var(--fs-500) !important; }
+.fs-600 { font-size: var(--fs-600) !important; }
+.fs-700 { font-size: var(--fs-700) !important; }
+.fs-800 { font-size: var(--fs-800) !important; }
+.fs-900 { font-size: var(--fs-900) !important; }
 
 .has-medium-font-size {
     font-size: var(--fs-hero-intro);
 }
 
+.lh-snug {
+    line-height: 1.333;
+}
 
 strong, b {
     font-weight: var(--fw-600);
