--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -190,3 +190,31 @@ for (; i < all.length; i++) {
 // 	font-size: $min-value; // Fallback for older browsers
 // 	font-size: clamp(#{if($min-value > $max-value, $max-value, $min-value)}, #{$calc-value}, #{if($min-value > $max-value, $min-value, $max-value)});
 // }
+
+.filters {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    width: 100%;
+    border-bottom: 1px solid var(--col-dark-grey);
+    margin-bottom: 3rem;
+    li {
+        padding-block: 1rem;
+        color: var(--col-dark-grey);
+        cursor: pointer;
+        &.active {
+            color: white;
+            font-weight: var(--fw-600);
+        }
+    }
+}
+
+.case_study {
+    &__image {
+        aspect-ratio: 4 / 3;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        margin-bottom: 0.75rem;
+    }
+}
