--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -8,6 +8,9 @@
   --col-talent-pink: #E8088E;
   --col-white: #FFFFFF;
   --col-call360-blue: #3B7DC0;
+  --col-light-blue: #E6EFF7;
+  --col-light-green: #98E4B8;
+  --col-sky-blue: #92B3D5;
   --col-main-blue: #112C4D;
   --col-background-blue: #0B1F3A;
   --h-top: 85px;
