--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -9,6 +9,7 @@
 @import "integrations";
 @import "forms";
 @import "trial-form";
+@import "hub";
 @import "blocks/blocks";
 // @import "case_study";
 
