--- a/src/sass/theme/_colours.scss
+++ b/src/sass/theme/_colours.scss
@@ -1,3 +1,14 @@
+.has-light-blue-background-color {
+    background-color: var(--col-light-blue) !important;
+}
+.has-light-green-background-color {
+    background-color: var(--col-light-green) !important;
+}
+.has-sky-blue-background-color {
+    background-color: var(--col-sky-blue) !important;
+}
+
+
 .has-background-blue-color {
     color: var(--col-background-blue) !important;
 }
