--- a/src/sass/theme/_props.scss
+++ b/src/sass/theme/_props.scss
@@ -11,6 +11,11 @@ $col-secondary: #e9988e;
 	--col-talent-pink:      #E8088E;
 	--col-white:            #FFFFFF;
 	--col-call360-blue:     #3B7DC0;
+
+    --col-light-blue:       #E6EFF7;
+    --col-light-green:      #98E4B8;
+    --col-sky-blue:         #92B3D5;
+
 	--col-main-blue:        #112C4D;
 	--col-background-blue:  #0B1F3A;
 
